--- a/builds/msvc2013/E3Modular.vcxproj
+++ b/builds/msvc2013/E3Modular.vcxproj
@@ -433,8 +433,8 @@ copy $(OutDir)\$(TargetFileName) F:\Devices\Vstplugins\test\$(TargetFileName)
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='App_Debug|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='App_Release|Win32'">false</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="..\..\src\core\Bank.h" />
-    <ClInclude Include="..\..\src\core\BankSerializer.h" />
+    <ClInclude Include="..\..\src\core\Database.h" />
+    <ClInclude Include="..\..\src\core\Serializer.h" />
     <ClInclude Include="..\..\src\core\GlobalHeader.h" />
     <ClInclude Include="..\..\src\core\Link.h" />
     <ClInclude Include="..\..\src\core\MonitorUpdater.h" />
@@ -520,8 +520,8 @@ copy $(OutDir)\$(TargetFileName) F:\Devices\Vstplugins\test\$(TargetFileName)
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='VST_Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='VST_Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\src\core\Bank.cpp" />
-    <ClCompile Include="..\..\src\core\BankSerializer.cpp" />
+    <ClCompile Include="..\..\src\core\Database.cpp" />
+    <ClCompile Include="..\..\src\core\Serializer.cpp" />
     <ClCompile Include="..\..\src\core\CpuMeter.cpp" />
     <ClCompile Include="..\..\src\core\Link.cpp" />
     <ClCompile Include="..\..\src\core\Module.cpp" />
